@@ -11,6 +11,16 @@ lintian (2.2.19) UNRELEASED; urgency=low
       all of the descriptive text is included.  Thanks, Jonathan Wiltshire.
       (Closes: #557786)
 
+  * frontend/lintian:
+    + [RA] Add options --suppress-tags and --suppress-tags-from-file to
+      completely suppress the given tags.
+
+  * lib/Tags.pm:
+    + [RA] Support suppressing a list of tags.
+
+  * man/lintian.1:
+    + [RA] Document --suppress-tags and --suppress-tags-from-file.
+
   * t/runtests:
     + [RA] Unwrap the Options field so that it can be continued.
     + [RA] Replace TESTSET in Options with the root of the test suite so
